<resources>
  <string name="app_name">Placemark</string>
  <string name="hint_placemarkTitle">Placemark Title</string>
  <string name="hint_placemarkDescription">Description </string>
  <string name="button_addPlacemark">Add Placemark</string>
  <string name="menu_addPlacemark">Add</string>
  <string name="menu_cancelPlacemark">Cancel</string>
  <string name="enter_placemark_title"> Please enter a Placemark Title </string>
  <string name="save_placemark"> Save Placemark </string>
  <string name="button_addImage"> Add Image </string>
  <string name="button_changeImage"> Change Image</string>
  <string name="button_editImage"> Edit Image</string>
  <string name="select_placemark_image">Select placemark image</string>
  <string name="title_activity_maps">Map</string>
  <string name="button_location">Set Location</string>
  <string name="button_delete">Delete Placemark</string>
  <string name="title_activity_placemark_maps">Map of All Placemarks</string>

</resources>
